# mapr_project

./: CMakeLists.txt  LICENSE  README.md  d  exit  package.xml
include/mapr_project/: mapr_project.hpp
launch/: MAPR_elevation_map_project.launch  MAPR_elevation_map_project_OMPL.launch  mapr_project.launch  mapr_project_ompl.launch
neural_network/: Python3.7&PyTorch_installation  preprocessing.py  pytorchGraph.py  train.py  training_data.npy  unet.py
rviz/: elevation_map.rviz  elevation_map_ompl.rviz
scripts/: elevMapExample.py  elevMap_create.py  elevMap_start_end.py
src/: mapr_project.cpp  mapr_project_node.cpp  ompl_example_2d.cpp  ompl_example_2d_node.cpp
