<?xml version="1.0"?>
<package format="2">
  <name>MAPR_elevation_map_project</name>
  <version>0.0.1</version>
  <description>Elevation map.</description>
  <maintainer email="kamil.miedzinski@student.put.poznan.pl">Kamil Miedzinski, Mateusz Grycmacherr</maintainer>
  <license>BSD</license>
  <url type="website">http://lrm.put.poznan.pl</url>
  <url type="bugtracker">http://lrm.put.poznan.pl</url>
  <author email="kamil.miedzinski@student.put.poznan.pl">Kamil Miedzinski, Mateusz Grycmacher</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>trajectory_msgs</depend>
  <depend>ompl</depend>
</package>
